# gazette-data-s

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/api/: claude.py  companies_house.py  gmail.py  resend_client.py
src/db/: connection.py  models.py  schema.sql
src/graph/: nodes.py  state.py  workflow.py
src/services/: ccod_sync.py  email_watcher.py  enrichment.py
src/utils/: config.py  name_matching.py
tests/: conftest.py  test_companies_house.py  test_config.py  test_date_parsing.py  test_enrichment_service.py  test_gmail_token_storage.py  test_name_matching.py
tests/integration/: test_email_watcher.py  test_enrichment_workflow.py
